--- a/style.css
+++ b/style.css
@@ -2,16 +2,7 @@ body {
 	min-width: 800px;
 	margin: 0;
 	font-family: Arial;
-}
-
-.nav {
-	position: relative;
-	border: 1px solid gray;
-	top: 0;
-	margin: auto;
-	padding: 12px;
-	text-align: end;
-	font-size: 14px;
+	font-size: 13px;
 }
 
 a {
@@ -22,18 +13,25 @@ a {
 a:hover {
 	text-decoration: underline;
 }
-.center-p {
-	font-size: 13px;
+
+.nav {
+	position: relative;
+	top: 0;
 	margin: auto;
-	text-align: center;
-}
-#footer {
-
+	padding: 12px;
+	text-align: end;
 }
 
-.buttons {
-	margin: 20px auto;
+.signin {
+	background-color: #4583eb;
+	color: white;
+	font-weight: bold;
+	height: 30px;
+	width: 71px;
+	border: #4583eb;
+	border-radius: 2px;
 }
+
 #google-logo {
 	position: static;
 	display: block;
@@ -42,48 +40,28 @@ a:hover {
 	margin-bottom: 30px;
 
 }
-.footer {
-	position: absolute;
-	margin: 0;
-	width: 100%;
-	height: 25px;
-	left: 0;
-	bottom: 0;
-	background: #f2f2f2;
-	border: 0.5px solid #e4e4e4;
-	padding-top: 12px;
-	font-size: 14px;
-}
-.footer a {
-	color: #63676c;
-}
-.lefted {
-	margin-left: 12px;
-	float: left;
-}
-
-.righted {
-	margin-right: 12px;
-	float: right;
-}
 
 #search-div {
 	text-align: center;
 	width: 50%;
 	margin: auto;
-	border: 1px solid black;
-}
-#search-form {
 }
 
 #search-box {
 	color: black;
 	font-size: 16px;
 	background-color: white;
-	width: 400px;
-	height: 40px;
+	width: 584px;
+	height: 44px;
 	border: 0.5px solid #cccccc;
 	border-radius: 2px;
+	/*the following two line is copied from zmiralles' answer*/
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+	transition: box-shadow 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
+}
+
+.buttons {
+	margin: 20px auto;
 }
 
 #search-button,
@@ -95,11 +73,44 @@ a:hover {
 	border: 1px solid #f2f2f2;
 	display: inline-block;
 	font-weight: bold;
-	font-size: 13px;
 	padding: 10px;
 }
 
 #search-button:hover,
 #lucky-button:hover {
 	border-color: gray;
+	color: black;
 }
+
+.center-p {
+	margin: auto;
+	text-align: center;
+}
+
+.footer {
+	position: absolute;
+	margin: 0;
+	width: 100%;
+	height: 25px;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	background: #f2f2f2;
+	border-top: 0.5px solid #e4e4e4;
+	padding-top: 12px;
+}
+
+.footer a {
+	color: #63676c;
+}
+
+.lefted {
+	margin-left: 12px;
+	float: left;
+}
+
+.righted {
+	margin-right: 12px;
+	float: right;
+}
+
